--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>warung game login</title>
-    <link rel="shortcut icon" href="image/console.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../image/console.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/login.css">
 </head>
 <body>
@@ -40,7 +40,7 @@
             </div>
             
             <div class="register-link">
-              <p>tidak punya akun? <a href="html/daftar.html">daftar</a></p>
+              <p>tidak punya akun? <a href="../html/daftar.html">daftar</a></p>
             </div>
           </form>
     </div>
