--- a/html/daftar.html
+++ b/html/daftar.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>warung game daftar</title>
-    <link rel="shortcut icon" href="image/console.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/daftar.css">
+    <link rel="shortcut icon" href="../image/console.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/daftar.css">
 </head>
 <body>
     <div class="container">
@@ -47,7 +47,7 @@
                   </div>
 
                   <div class="register-link">
-                 <p>jika punya akun <a href="html/login.html">Login</a></p>
+                 <p>jika punya akun <a href="../html/login.html">Login</a></p>
                  </div>
             </form>
         </div>
