--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>warung game</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="Warung Game/image/console.png" type="image/x-icon">      
+    <link rel="shortcut icon" href="image/console.png" type="image/x-icon">      
 </head>
 <body>
     <!--halaman pertaman-->
@@ -116,4 +116,5 @@
     </div>
 </section>
 <script src="js/script.js"></script>
+
 </html>
